@@ -1,3 +1,9 @@
+2016-05-02  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* omp-low.c (lower_oacc_head_tail): Assert there is at least one
+	marker.
+	(oacc_loop_process): Check mask for loop termination.
+
 2016-05-02  Jan Hubicka  <hubicka@ucw.cz>
 
 	* cif-code.def (CIF_THUNK): Add.
